<?xml version="1.0" encoding="utf-8"?>

<resources>

  <string name="appName">Socket Weather</string>
  <string name="temperatureFormat">%s°</string>
  <string name="percentFormat">%d%%</string>

  <string name="common_backButtonDesc">Back</string>

  <string name="chooseLocation_title">Where\'s your weather?</string>
  <string name="chooseLocation_myLocationButton">Follow me</string>
  <string name="chooseLocation_searchHint">Search</string>
  <string name="chooseLocation_submissionError">Something went wrong 😕</string>
  <string name="chooseLocation_searchLoading">Loading results…</string>
  <string name="chooseLocation_searchError">Something went wrong 😕. Check your internet connection?</string>
  <string name="chooseLocation_searchEmpty">No locations found</string>
  <string name="chooseLocation_permissionError">Location permission required</string>
  <string name="chooseLocation_submitting">Saving location…</string>
  <string name="chooseLocation_closeDesc">Close</string>

  <string name="home_findingLocation">Finding location…</string>
  <string name="home_refresh">Refresh</string>
  <string name="home_about">About</string>
  <string name="home_dynamicColor">Dynamic colour</string>
  <string name="home_feelsLike">Feels like</string>
  <string name="home_loading">Loading forecast…</string>
  <string name="home_networkError">Network request failed</string>
  <string name="home_locationError">Failed to find current location</string>
  <string name="home_retryButton">Retry</string>
  <string name="home_updatingNow">Refreshing…</string>
  <string name="home_lastUpdated">Updated %s</string>
  <string name="home_justUpdated">Updated just now</string>
  <string name="home_dateForecastTomorrow">Tomorrow</string>
  <string name="home_currentIconDesc">Icon for current conditions.</string>
  <string name="home_wind">%1$d km/h</string>
  <string name="home_uvProtection">%1$s–%2$s</string>
  <string name="home_rainRadarButton">Rain radar</string>
  <string name="home_rainRadarMessage">BOM has broken rain radar for now 😢</string>
  <string name="home_moreButton">More</string>
  <string name="home_lessButton">Less</string>
  <string name="home_rainChance">Chance of rain</string>
  <string name="home_humidity">Humidity</string>
  <string name="home_windSpeed">Wind speed</string>
  <string name="home_uvWarningTimes">UV warning times</string>
  <string name="home_deleteLocationDesc">Delete location button</string>

  <string name="home_error_retryButton">Try again</string>
  <string name="home_error_unknownLocation_title">Where are you?</string>
  <string name="home_error_unknownLocation_message">Sorry mate, this app provides forecasts for Australia only!</string>
  <string name="home_error_data_title">Something\'s wrong</string>
  <string
      name="home_error_data_message">Looks like the Bureau of Meteorology is returning some unexpected data.</string>
  <string name="home_error_network_title">Network issues?</string>
  <string name="home_error_network_message">Looks like the Bureau of Meteorology is unreachable at the moment.</string>
  <string name="home_error_location_title">Can\'t locate you</string>
  <string name="home_error_location_message">Try double checking your location settings and permissions.</string>

  <string name="switchLocation_followMeTitle">Follow me</string>
  <string name="switchLocation_followMeSubtitle">Forecast at your location</string>
  <string name="switchLocation_add">Add another location</string>
  <string name="switchLocation_noneTitle">No location</string>
  <string name="switchLocation_noneSubtitle">No location selected yet</string>

  <string name="rainRadar_backDesc">Back</string>
  <string name="rainRadar_title">Rain radar</string>

  <string name="about_title">About</string>
  <string name="about_body">This app was hand made in Melbourne by Chris Horner, along with some friendly contributors. Development was inspired by Shifty Jelly\'s late Pocket Weather.\n\nAll forecast data is provided by the Australian Bureau of Meteorology.\n\nThis app respects your privacy and doesn\'t harvest your data. It\'s also completely open source.</string>
  <string name="about_contributorsLink">contributors</string>
  <string name="about_pocketWeatherLink">Pocket Weather</string>
  <string name="about_source">Source on GitHub</string>
  <string name="about_chrisWebsite">Chris\' website</string>
  <string name="about_bomWebsite">Bureau of Meteorology</string>

  <string name="widget_description">Forecast from Socket Weather</string>
  <string name="widget_feelsShort">Feels %s</string>
  <string name="widget_feelsLong">Feels like %s</string>
  <string name="widget_today">Today</string>
  <string name="widget_tomorrow">Tomorrow</string>

  <string name="notification_name">Background sync</string>
  <string name="notification_title">Updating weather forecast</string>

</resources>
