<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_error"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:gravity="center"
    android:orientation="vertical"
    >

  <TextView
      android:id="@+id/home_error_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:textAppearance="?attr/textAppearanceHeadline4"
      tools:text="@string/home_error_data_title"
      />

  <TextView
      android:id="@+id/home_error_message"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:gravity="center"
      android:maxWidth="280dp"
      android:textAppearance="?attr/textAppearanceBody1"
      tools:text="@string/home_error_data_message"
      />

  <ImageView
      android:id="@+id/home_error_image"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:importantForAccessibility="no"
      tools:src="@drawable/gfx_data_error"
      />

  <Button
      android:id="@+id/home_error_retryButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:minWidth="200dp"
      android:text="@string/home_error_retryButton"
      />

</LinearLayout>
