<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/chooseLocation_toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:navigationIcon="@drawable/ic_close_24dp"
      />

  <TextView
      android:id="@+id/chooseLocation_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:paddingStart="32dp"
      android:paddingEnd="32dp"
      android:text="@string/chooseLocation_title"
      android:textAppearance="?attr/textAppearanceHeadline4"
      />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/chooseLocation_followMeButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="32dp"
      android:gravity="start|center_vertical"
      android:minHeight="56dp"
      android:text="@string/chooseLocation_myLocationButton"
      app:icon="@drawable/ic_my_location_24dp"
      app:iconGravity="start"
      app:iconPadding="16dp"
      style="@style/Widget.MaterialComponents.Button.Icon"
      />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/chooseLocation_searchInputLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="32dp"
      android:hint="@string/chooseLocation_searchHint"
      app:startIconDrawable="@drawable/ic_search_24dp"
      app:startIconTint="?android:attr/textColorPrimary"
      style="@style/Widget.SocketWeather.TextInputLayout.OutlinedBox"
      >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/chooseLocation_searchInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        />

  </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
